# Hidden-Markov-Model

./: .gitignore  CMakeLists.txt  README.md
data/: README.md  example_observations.txt
include/hmm/: HiddenMarkovModel.hpp  Inputs.hpp
src/: HiddenMarkovModel.cpp  Inputs.cpp  main.cpp
tests/: README.md
